--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "generate-docs": "jsdoc . -d docs"
   },
-  "author": "",
+  "author": "bogibo",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "rpio": "^2.2.0",
     "socket.io": "^2.3.0"
+  },
+  "devDependencies": {
+    "jsdoc": "^3.6.6"
   }
 }
